# spexpert

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  IDispatch_backup.cpp  LICENSE  README.md  Spexpert.pro  USMCVB_COM.tlb  WinSpecVB.tlb  appcore.cpp  appcore.h  appstate.h  experimentsetup.cpp  experimentsetup.h  exptask.h  exptasks.cpp  lockableqvector.h  mainwindow.cpp  mainwindow.h  neslab.cpp  neslab.h  neslabusmainwidget.cpp  neslabusmainwidget.h  plotproxy.cpp  stagecontrol.cpp  stagecontrol.h  usmcvb_com.h  waittask.h  waittasklist.cpp  waittasklist.h  winspec.cpp
cmake/: get_cppreference_tags.cmake
doc/html/: annotated.html  annotated.js  appcore_8h_source.html  appstate_8h_source.html  centralwidget_8h_source.html  class_delayed_start.html  class_delayed_start.js  class_exp_task.html  class_exp_task.js  class_exp_task__inherit__graph.map  class_exp_task__inherit__graph.md5  class_exp_task_list.html  class_exp_task_list.js  class_exp_task_list__inherit__graph.map  class_exp_task_list__inherit__graph.md5  class_fork_join_task.html  class_fork_join_task.js  class_fork_join_task__inherit__graph.map  class_fork_join_task__inherit__graph.md5  class_wait_exp_task.html  class_wait_exp_task.js  class_wait_exp_task__inherit__graph.map  class_wait_exp_task__inherit__graph.md5  class_wait_fork_join_task.html  class_wait_fork_join_task.js  class_wait_fork_join_task__inherit__graph.map  class_wait_fork_join_task__inherit__graph.md5  class_wait_task.html  class_wait_task.js  class_wait_task_list.html  class_wait_task_list.js  class_wait_task_list__inherit__graph.map  class_wait_task_list__inherit__graph.md5  class_wait_worker.html  class_wait_worker.js  class_waiting_task.html  class_waiting_task.js  class_waiting_task__inherit__graph.map  class_waiting_task__inherit__graph.md5  classes.html  (+53 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+19 more)
doc/latex/: annotated.tex  class_delayed_start.tex  class_exp_task.tex  class_exp_task__inherit__graph.md5  class_exp_task_list.tex  class_exp_task_list__inherit__graph.md5  class_fork_join_task.tex  class_fork_join_task__inherit__graph.md5  class_wait_exp_task.tex  class_wait_exp_task__inherit__graph.md5  class_wait_fork_join_task.tex  class_wait_fork_join_task__inherit__graph.md5  class_wait_task.tex  class_wait_task_list.tex  class_wait_task_list__inherit__graph.md5  class_wait_worker.tex  class_waiting_task.tex  class_waiting_task__inherit__graph.md5  hierarchy.tex  namespace_exp_task_list_traits.tex  namespace_wait_task_list_traits.tex  namespaces.tex  refman.tex  struct_exp_task_list_traits_1_1_task_item.tex  struct_wait_task_list_traits_1_1_task_item.tex
languages/: spexpert_cs.qm  spexpert_cs.ts  spexpert_en.qm  spexpert_en.ts
src/: CMakeLists.txt
src/biomolecules/spexpert/: CMakeLists.txt  appcore.cpp  appcore.h  appstate.cpp  appstate.h  centralwidget.cpp  centralwidget.h  experimentsetup.cpp  experimentsetup.h  exptask.cpp  exptasklist.cpp  exptasklist.h  exptasks.cpp  exptasks.h  index.md  lockableqvector.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mock_winspec.cpp  mock_winspec.h  neslab.cpp  neslab.h  plotproxy.h  relay.h  relay_options_widgets.cpp  relay_options_widgets.h  stagecontrol.cpp  stagecontrol.h  stagesetup.cpp  stagesetup.h  timespan.cpp  timespan.h  usmcvb_com.cpp  waittask.cpp  waittask_old.h  waittasklist.h  waittasks.cpp  waittasks.h  winspec.cpp  (+3 more)
